Projects view refactor bug squash

--- a/src/components/ProjectInfo/ProjectInfo.css
+++ b/src/components/ProjectInfo/ProjectInfo.css
@@ -1,9 +1,19 @@
-.project-info-view-wrap {
+.project-info-view {
+  height: 100%;
+}
+
+.project-info-wrap {
 	display: flex;
 	justify-content: space-around;
   /* overflow: hidden; */
-  /* height: 100%; */
+  height: 100%;
   background: linear-gradient(to bottom, #f9f9f9 10%, #E3744E 0%);
+}
+
+.project-info-head {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 .selected-project-image {
@@ -65,11 +75,11 @@
 }
 
 @media only screen and (max-width: 420px) {
-  .project-info-view-wrap {
+  .project-info-wrap {
     overflow:hidden;
     flex-direction: column-reverse;
     align-items: center;
     justify-content: normal;
-    align-content: stretch;
+    /* align-content: stretch; */
   }
 }
