--- a/src/components/Projects/Projects.css
+++ b/src/components/Projects/Projects.css
@@ -1,3 +1,12 @@
+.projects-head {
+	display: flex;
+	justify-content: space-around;
+	width: 100%;
+  height: 50px;
+	margin-top: 75px;
+  z-index: 2;
+}
+
 .projects-view-wrap {
 	display: flex;
 	justify-content: space-around;
@@ -6,7 +15,7 @@
 }
 
 .projects-wave {
-  position: absolute;
+  position: relative;
   height: 100px;
   top: 220px;
   transform: rotate(180deg) scale(6.5);
